configurado dockerfile e docker-compose, criado dto para validações de input na controller, ajustado gemini de função para classe, criado feature de salvar imagem no diretório upload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,25 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: shopper-api
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongo
+    networks:
+      - app-network
 
 volumes:
   mongo-data:
+
+
+networks:
+  app-network:
+    driver: bridge
